# Basic-Interpreter-2024

./: CMakeLists.txt
Basic/: Basic.cpp  parser.cpp  program.cpp  program.hpp  statement.cpp  statement.hpp
Basic/Utils/: tokenScanner.cpp
StanfordCPPLib/: tokenscanner.h
